Fixed horizontal scrolling on Firefox (and probably more)

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -51,6 +51,8 @@
 /* General */
 
 * {
+  -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
   box-sizing: border-box;
   color: inherit;
   font: inherit;
